# AI-for-Toxicology

./: .gitignore  Ablation Study.ipynb  Ablation_Study.ipynb  Baseline_VAE.ipynb  EDA.ipynb  Exploratory_Data_Analysis.ipynb  Graph_VAE.ipynb  Hyperparameter_and_Model_Optimization.ipynb  Latent Analysis & Ablation Study.ipynb  PostTrained_VAE.ipynb  PostTrained_VAE_Finetuning.ipynb  PostTrained_VAE_no_pred.ipynb  PostTrained_VAE_trial.ipynb  PreTrained_VAE - GRU Encoder.ipynb  PreTrained_VAE.ipynb  PreTrained_VAE_Optimization.ipynb  PreTrained_VAE_Optimization_Analysis.ipynb  Pretrained_VAE_EndtoEnd_attempt.ipynb  Pretrained_VAE_EndtoEnd_attempt_2.ipynb  Pretrained_VAE_EndtoEnd_attempt_2_latentanalysis.ipynb  Pretrained_VAE_EndtoEnd_attempt_2_updated.ipynb  README.md  Thomas_VAE.ipynb  VAE_experiments.ipynb  XGBoost_Implementation.ipynb  XGBoost_Prediction.ipynb  Zinc_ChemBL_PreTrained.ipynb  cross_validation.ipynb  dataset_exploration.ipynb  final_results.ipynb  full_PreTrained_VAE.ipynb  pyproject.toml
Interim_Report/: XGBoost_Implementation.ipynb
Old Files/: Baseline_VAE.ipynb  Baseline_VAE_experiments.ipynb  V2_Baseline_VAE.ipynb
data/Test/: tox21_test_clean.csv
data/Train/: chembl_clean.csv  tox21_train_clean.csv
data/Val/: tox21_val_clean.csv
scripts/: test.py  train.py
src/ai_for_toxicology/: __init__.py  config.py  data.py  model.py  test.py  train.py
wandb/: latest-run
wandb/run-20260324_145251-333ogzh4/files/: wandb-metadata.json
wandb/run-20260324_145654-bxczfgtn/: run-bxczfgtn.wandb
wandb/run-20260324_184418-qainy3ut/: run-qainy3ut.wandb
(+16 files in other folders)
