[project]
name = "ai-for-toxicology"
version = "0.1.0"
description = "Research code for AI methods in toxicology."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "deepchem>=2.8.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "rdkit-pypi>=2022.9.5",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
]
