[project]
name = "ai-for-toxicology"
version = "0.1.0"
description = "Research code for AI methods in toxicology."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.6.0",
    "deepchem>=2.8.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "rdkit-pypi>=2022.9.5",
    "scikit-learn>=1.6.0",
    "scikit-multilearn>=0.2.0",
    "selfies>=2.2.0",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "umap-learn>=0.5.11",
    "wandb>=0.25.1",
    "xgboost>=3.2.0",
]
